fix: view collapse

--- a/app/assets/stylesheets/new_signup_page2.scss
+++ b/app/assets/stylesheets/new_signup_page2.scss
@@ -1,5 +1,4 @@
 .new_signup_page2{
   background-color: $gray;
   width: 100%;
-  height: 2000px;
 }
