--- a/app/assets/stylesheets/new_signup_page2_main.scss
+++ b/app/assets/stylesheets/new_signup_page2_main.scss
@@ -1,5 +1,5 @@
 .new_signup_page2_main{
-  height: 1720px;
+  height: 100%;
 }
 
 .new_signup_page2_main_view{
@@ -9,16 +9,14 @@
   margin: 0 auto;
 
   &__check{
-    height: 300px;
-    widows: 200%;
     margin: auto;
+    padding-bottom: 30px;
 
     input{
       display: block;
       height: 50px;
       width: 330px;
       font-size: 15px;
-      margin: auto;
       margin-top: 10px;
       margin-bottom: 40px;
       border-radius: 5px;
@@ -36,10 +34,11 @@
 }
 
 .new_signup_page2_main_view__input{
+  width: 330px;
+  margin: auto;
   span{
     font-size: 14px;
     font-weight: bold;
-    margin-left: 195px;
   }
 
   .required_red{
@@ -55,26 +54,22 @@
     height: 50px;
     width: 330px;
     font-size: 15px;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 40px;
+    margin: 10px auto 40px;
     border-radius: 5px;
+    padding: 15px;
   }
 
   h2{
-    margin-left: 195px;
     font-weight: bold;
   }
 
   p{
-    display: inline-block;
-    margin: 10px 0 40px 195px; 
+    margin: 10px 0 40px 0; 
     font-size: 14px;
     line-height: 20px;
   }
     
   .birthdate{
-    margin-left: 195px;
     height: 50px;
 
     &__box{
@@ -120,18 +115,22 @@
     opacity: 0.5;
   }
 }
-  
+
+.new_signup_page2_main_view__check{
+  width: 330px;
+  margin: auto;
+
+}
+
 .g-recaptcha_form_group{
-  margin: 0 0 40px 195px;
+  margin: 0 0 40px 0;
 }
 
 .rule_agreement{
-  margin-left: 180px;
-  margin-right: 200px;
+  margin: 0 0 40px 0;
   font-size: 15px;
   text-align: center;
   line-height: 20px;
-  margin-bottom: 40px;
 
   a{
     color: #0099e8;
@@ -145,5 +144,12 @@
 }
 
 .rule_list{
-  margin-left: 350px;
+  width: 100%;
+  height: 100%;
+  text-align: right;
+
+  a{
+    color: #0099e8;
+    font-size: 15px;
+  }
 }
